<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/my_button"
        android:orientation="vertical"
        tools:context=".dashboard.home.detail.portofolio.DialogPortofolioFragment">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/portofolio_name"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_22ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_16sdp"
            android:padding="@dimen/_8sdp"
            android:backgroundTint="@color/background"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_14ssp"
            android:background="@drawable/my_button"
            tools:ignore="UnusedAttribute" />

        <TextView
            android:id="@+id/tv_publish_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:text="@string/publish_link"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_home"
            app:drawableTint="@color/primaryColor"
            android:drawablePadding="@dimen/_8sdp"/>

        <TextView
            android:id="@+id/tv_repo_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/repository_link"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/_14ssp"
            app:drawableStartCompat="@drawable/ic_github"
            app:drawableTint="@color/primaryColor"
            android:drawablePadding="@dimen/_8sdp"/>

        <TextView
            android:id="@+id/tv_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@drawable/my_button"
            android:gravity="center_horizontal"
            android:padding="@dimen/_8sdp"
            android:backgroundTint="@color/primaryColor"
            android:text="@string/type"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="@dimen/_14ssp"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</layout>
